--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 </head>
 <body>
-	<p class='tracking-normal text-left'>
+	<p class='tracking-normal text-left text-red-900'>
         madiawjdiajwdiajdiawdawda
     </p>
-    <p class='tracking-widest text-center'>
+    <p class='tracking-widest text-center text-teal-200'>
         awdawdawdawdawdawdawd
     </p>
 </body>
